deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-js
  template:
    metadata:
      labels:
        app: node-js
    spec:
      containers:
      - name: node-js
        image: hydpersistent/node-js-sample:1.0
        ports:
        - containerPort: 5000
        volumeMounts:  
        - mountPath: "/usr/src/app/data"
          name: app-data
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: node-js-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: node-js-service
spec:
  selector:
    app: node-js
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
  type: NodePort
